[package]
name = "tophat"
version = "0.1.0"
authors = ["Walther Chen <walther.chen@gmail.com>"]
description = "async http server"
keywords = ["http"]
categories = ["web-programming::http-server"]
edition = "2018"
license = "MIT OR Apache-2.0"
repository = "https://github.com/hwchen/tophat"
readme = "README.md"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
byte-pool = "0.2.1"
futures-core = "0.3.4"
futures-io = "0.3.4"
futures-timer = "3.0.2"
futures-util = "0.3.4"
http = "0.2.1"
httpdate = "0.3.2"
httparse = "1.3.4"
lazy_static = "1.4.0"
log = "0.4.8"
pin-project-lite = "0.1.4"
piper = "0.1.1"
thiserror = "1.0.16"

# for router
path-tree = { version = "0.1.9", optional = true }
type-map = { version = "0.3.0", optional = true }

# for identity
cookie = { version = "0.13.3", optional = true }
jsonwebtoken = { version = "7.1.0", optional = true }
serde = { version = "1.0.110", features = ["derive"], optional = true }
time = { version = "0.2.16", default_features = false, optional = true }

[features]
# Nothing enabled by default
default = []

router = [
    "path-tree",
    "type-map",
]

identity = [
    "cookie",
    "jsonwebtoken",
    "serde",
    "time",
]

[dev-dependencies]
num_cpus = "1.13.0"
piper = "0.1.1"
pretty_env_logger = "0.4.0"
smol = "0.1.4"

[[example]]
name = "routing"
required-features = ["router"]

[[example]]
name = "identity"
required-features = ["identity", "router"]

[[example]]
name = "middleware"
required-features = ["router"]

[package.metadata.docs.rs]
all-features = true
