[package]
name = "sqlx-example"
version = "0.1.0"
authors = ["Walther Chen <walther.chen@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
sqlx = { version = "0.3.5", path = "../../../sqlx", default-features = false, features = ["runtime-async-std", "postgres", "macros"] }
smol = "0.1.10"
dotenv = "0.15.0"
