[package]
name = "sqlx-example"
version = "0.1.0"
authors = ["Walther Chen <walther.chen@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
sqlx = { version = "0.4.2", default-features = false, features = ["runtime-async-std-native-tls", "postgres", "macros"] }
smol = "1.2.5"
dotenv = "0.15.0"
