[package]
name = "tokio-tophat"
version = "0.1.0"
authors = ["Walther Chen <walther.chen@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
async-dup = "1.2.2"
futures-lite = "1.11.3"
tokio = { version = "1", features = ["full"] }
tophat = { path = "../../" }
http = "0.2.2"
tokio-util = { version = "0.6.0", features = ["compat"] }
tracing-subscriber = "0.2.15"
